--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -39,15 +39,22 @@ table#movies {
   width: 100%;
   border-bottom: 2px solid black;
 }
+
 table#movies th {
   border: 2px solid white;
   font-weight: bold;
   background-color: wheat;
 }
+
+table#movies th.hilite {
+	background-color: yellow;
+}
+
 table#movies th, table#movies td {
   padding: 4px;
   text-align: left;
 }
+
 #notice #warning {
   background: rosybrown;
   margin: 1em 0;
@@ -59,3 +66,4 @@ form label {
   font-weight: bold;
   color: maroon;
 }
+
