--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,9 +4,11 @@
 %table#movies
   %thead
     %tr
-      %th Movie Title
+      %th{ :class => [@orderby == 'title' && 'hilite']  }
+        %a#title_header{}= link_to 'Movie Title', :o=>'title'
       %th Rating
-      %th Release Date
+      %th{ :class => [@orderby == 'release_date' && 'hilite']  }
+        %a#release_date_header= link_to 'Release Date', :o=>'release_date'
       %th More Info
   %tbody
     - @movies.each do |movie|
