- added filter logic in controller
filter is not retained yet

--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -3,9 +3,9 @@
 
 = form_tag movies_path, :method => :get, :id => 'ratings_form' do
   Include: 
-  - @all_ratings.each do |rating|
-    = rating
-    = check_box_tag "ratings[#{rating}]"
+  - @all_ratings.each do |key,value|
+    = key
+    = check_box_tag "ratings[#{key}]", value, value
   = submit_tag 'Refresh', :id => 'ratings_submit'
 
 %table#movies
