--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -5,7 +5,7 @@
   Include: 
   - @all_ratings.each do |key,value|
     = key
-    = check_box_tag "ratings[#{key}]", value, value
+    = check_box_tag "ratings[#{key}]", 0, session[:filter].include?(key)
   = submit_tag 'Refresh', :id => 'ratings_submit'
 
 %table#movies
