human readable code

--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -3,7 +3,7 @@
 
 = form_tag movies_path, :method => :get, :id => 'ratings_form' do
   Include: 
-  - @all_ratings.each do |key,value|
+  - @all_ratings.each_key do |key|
     = key
     = check_box_tag "ratings[#{key}]", 0, session[:filter].include?(key)
   = submit_tag 'Refresh', :id => 'ratings_submit'
