--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -5,17 +5,17 @@
   Include: 
   - @all_ratings.each_key do |key|
     = key
-    = check_box_tag "ratings[#{key}]", 1, session[:filter].include?(key)
+    = check_box_tag "ratings[#{key}]", 1, @filter.include?(key)
   = submit_tag 'Refresh', :id => 'ratings_submit'
 
 %table#movies
   %thead
     %tr
       %th{ :class => [@orderby == 'title' && 'hilite']  }
-        = link_to "Movie Title", movies_path(:o => 'title'), :id=>"title_header"  
+        = link_to "Movie Title", movies_path(:o => 'title',:filter => @filter.join(':')), :id=>"title_header"  
       %th Rating
       %th{ :class => [@orderby == 'release_date' && 'hilite']  }
-        = link_to 'Release Date', movies_path(:o => 'release_date'), :id=>'release_date_header' 
+        = link_to 'Release Date', movies_path(:o => 'release_date', :filter => @filter.join(':')), :id=>'release_date_header' 
       %th More Info
   %tbody
     - @movies.each do |movie|
