--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -5,9 +5,9 @@
   Include: 
   - @all_ratings.each_key do |key|
     = key
-    = check_box_tag "ratings[#{key}]", :id => "ratings_#{key}" # 0, @filter.include?(key), 
+    = check_box_tag "ratings[#{key}]", :id => "ratings_#{key}"   
   = submit_tag 'Refresh', :id => 'ratings_submit'
-
+-# 0, @filter.include?(key),
 %table#movies
   %thead
     %tr
