removed :id=>"<id>" as under Heroku it renders as
Started GET "/movies?utf8=✓&ratings[G]={:id=>"ratings_G"}&ratings[R]={:id=>"ratings_R"}&commit=Refresh" for 62.74.140.25 at 2013-04-12 08:20:54  0000

--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -5,9 +5,9 @@
   Include: 
   - @all_ratings.each_key do |key|
     = key
-    = check_box_tag "ratings[#{key}]", :id => "ratings_#{key}"   
+    = check_box_tag "ratings[#{key}]", 0, @filter.include?(key)  
   = submit_tag 'Refresh', :id => 'ratings_submit'
--# 0, @filter.include?(key),
+-# 
 %table#movies
   %thead
     %tr
